syntax = "proto3";

option go_package = "./pb";

package pb;

message DecreaseVolumeReq {
  int64 id = 1;
  int64 size = 2;
}

message DecreaseVolumeResp {
}

message FindVolumeReq {
  int64 id = 1;
}

message FindVolumeResp {
  int64 nowVolume = 1;
  int64 totalVolume = 2;
}

message AddVolumeReq {
  int64 id = 1;
  int64 size = 2;
}

message AddVolumeResp {
}

message RepositoryIdReq{
  int64 repositoryId = 1;
}

message UserRepositoryNameReply{
  string repositoryName = 1;
}

message FindRepositoryIdReq{
  int64 id = 1;
}

message FindRepositoryIdReply{
  int64 repositoryId = 1;
}

message CreateByShareReq{
  int64 userId = 1;
  int64 parentId = 2;
  int64 repositoryId = 3;
  string name = 4;
}

message CreateByShareReply{
  int64 id = 1;
}


service User {
  rpc decreaseVolume(DecreaseVolumeReq) returns (DecreaseVolumeResp); // 减少存储
  rpc findVolumeById(FindVolumeReq) returns (FindVolumeResp);
  rpc addVolume(AddVolumeReq) returns (AddVolumeResp); // 增加存储
}

service userRepository {
  rpc getUserRepositoryNameByRepositoryId(RepositoryIdReq) returns(UserRepositoryNameReply);
  rpc findRepositoryIdById(FindRepositoryIdReq) returns(FindRepositoryIdReply);
  rpc createByShare(CreateByShareReq) returns(CreateByShareReply);
}

//  goctl rpc protoc usercenter.proto --go_out=../ --go-grpc_out=../ --zrpc_out=../ -m  //-m 分组